force-app/main/default/objects/Flight_Detail__c/Flight_Detail__c.object-meta.xml
<CustomObject>
    <description>This object is designed for implementing Lightning Flow</description>
    <label>Flight Detail</label>
    <nameField>
        <label>Flight Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flight Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>