force-app/main/default/objects/Flight_Detail__c/fields/DistanceInKm__c.field-meta.xml
<CustomField>
    <fullName>DistanceInKm__c</fullName>
    <label>DistanceInKm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>