force-app/main/default/objects/Flight_Detail__c/fields/Start_City__c.field-meta.xml
<CustomField>
    <fullName>Start_City__c</fullName>
    <label>Start City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>